--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	<link rel="stylesheet" href="./style.css">
 	<title>游戏实名认证 - PhiCommunity</title>
 </head>
-
 <body>
 	<div class="container">
 		<div class="title">
@@ -16,12 +15,15 @@
 		</div>
 		<div class="content">
 			<div class="description">
-				为响应国家相关规定，游戏用户须通过国家网络游戏防
-				沉迷实名认证系统的身份认证。
-				
+				按文化部《网络游戏管理暂行办法》要求，网络游戏玩家需要进行实名认证
 			</div>
-			<div class="inputContainer">
-				<input type="text" id="name" placeholder="真实姓名" required>
+			<div class="description">
+				<font color="#FF5151">实名信息提交后不可更改，请您谨慎填写：</font> 
+			</div>
+			<div class="names">
+				<input class="name" type="text" id="name" placeholder="真实姓名" required> 
+				</div>
+				<div class="ids">
 				<input type="number" id="idNum" placeholder="真实身份证号码" required pattern="/^[1-9]\d{5}(18|19|20)\d{2}((0[1-9])|(1[0-2]))(([0-2][1-9])|10|20|30|31)\d{3}[0-9Xx]$/">
 			</div>
 		</div>
