--- a/blocked.html
+++ b/blocked.html
@@ -16,10 +16,10 @@
 		</div>
 		<div class="content">
 			<div class="description">
-				您当前为未成年账号，已被纳入防沉迷系统。根据国家
-				相关规定，周五、周六、周日及法定节假日20点- 21
-				点之外为健康保护时段。当前时间段无法游玩，请合理
-				安排时间。
+				您当前为未成年账号，已被纳入防沉迷系统。</br>
+				根据国家相关规定，</br>
+				周五、周六、周日及法定节假日20点- 21点之外为健康保护时段。</br>
+				当前时间段无法游玩，请合理安排时间。
 			</div>
 		</div>
 		<button id="confirmBtn" onclick="location.href='about:blank'">退出游戏</button>
